compiler/syntactical-analyser.output
Grammar

    0 $accept: script $end

    1 script: main-binding
    2       | binding-list main-binding

    3 binding-list: binding
    4             | binding-list binding

    5 binding: IDENTIFIER '=' expression

    6 main-binding: "main" '=' expression

    7 function: parameter-list "->" '{' function-body '}'

    8 function-body: expression
    9              | '|' subdomain-list expression

   10 subdomain-list: expression ':' expression '|'
   11               | subdomain-list expression ':' expression '|'

   12 parameter-list: parameter
   13               | parameter-list parameter

   14 parameter: '\\' IDENTIFIER

   15 expression: NUMBER
   16           | boolean
   17           | function
   18           | function-application
   19           | expression '+' expression
   20           | expression '-' expression
   21           | expression '*' expression
   22           | expression '/' expression
   23           | expression '>' expression
   24           | expression '<' expression
   25           | expression AND expression
   26           | expression OR expression
   27           | expression EQUALS expression
   28           | expression GEQUALS expression
   29           | expression LEQUALS expression
   30           | expression NEQUALS expression
   31           | "not" expression
   32           | '-' expression
   33           | expression '^' expression
   34           | '(' expression ')'

   35 function-application: IDENTIFIER '(' expression-list ')'
   36                     | IDENTIFIER

   37 expression-list: %empty
   38                | expression
   39                | expression-list ',' expression

   40 boolean: "True"
   41        | "False"


Terminals, with rules where they appear

$end (0) 0
'(' (40) 34 35
')' (41) 34 35
'*' (42) 21
'+' (43) 19
',' (44) 39
'-' (45) 20 32
'/' (47) 22
':' (58) 10 11
'<' (60) 24
'=' (61) 5 6
'>' (62) 23
'\\' (92) 14
'^' (94) 33
'{' (123) 7
'|' (124) 9 10 11
'}' (125) 7
error (256)
NUMBER (258) 15
IDENTIFIER (259) 5 14 35 36
"->" (260) 7
"main" (261) 6
"True" (262) 40
"False" (263) 41
AND (264) 25
OR (265) 26
EQUALS (266) 27
LEQUALS (267) 29
GEQUALS (268) 28
NEQUALS (269) 30
"not" (270) 31
NEG (271)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
script (34)
    on left: 1 2, on right: 0
binding-list (35)
    on left: 3 4, on right: 2 4
binding (36)
    on left: 5, on right: 3 4
main-binding (37)
    on left: 6, on right: 1 2
function (38)
    on left: 7, on right: 17
function-body (39)
    on left: 8 9, on right: 7
subdomain-list (40)
    on left: 10 11, on right: 9 11
parameter-list (41)
    on left: 12 13, on right: 7 13
parameter (42)
    on left: 14, on right: 12 13
expression (43)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34, on right: 5 6 8 9 10 11 19 20 21 22 23 24 25 26 27 28 29
    30 31 32 33 34 38 39
function-application (44)
    on left: 35 36, on right: 18
expression-list (45)
    on left: 37 38 39, on right: 35 39
boolean (46)
    on left: 40 41, on right: 16


State 0

    0 $accept: . script $end

    IDENTIFIER  shift, and go to state 1
    "main"      shift, and go to state 2

    script        go to state 3
    binding-list  go to state 4
    binding       go to state 5
    main-binding  go to state 6


State 1

    5 binding: IDENTIFIER . '=' expression

    '='  shift, and go to state 7


State 2

    6 main-binding: "main" . '=' expression

    '='  shift, and go to state 8


State 3

    0 $accept: script . $end

    $end  shift, and go to state 9


State 4

    2 script: binding-list . main-binding
    4 binding-list: binding-list . binding

    IDENTIFIER  shift, and go to state 1
    "main"      shift, and go to state 2

    binding       go to state 10
    main-binding  go to state 11


State 5

    3 binding-list: binding .

    $default  reduce using rule 3 (binding-list)


State 6

    1 script: main-binding .

    $default  reduce using rule 1 (script)


State 7

    5 binding: IDENTIFIER '=' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 23
    function-application  go to state 24
    boolean               go to state 25


State 8

    6 main-binding: "main" '=' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 26
    function-application  go to state 24
    boolean               go to state 25


State 9

    0 $accept: script $end .

    $default  accept


State 10

    4 binding-list: binding-list binding .

    $default  reduce using rule 4 (binding-list)


State 11

    2 script: binding-list main-binding .

    $default  reduce using rule 2 (script)


State 12

   15 expression: NUMBER .

    $default  reduce using rule 15 (expression)


State 13

   35 function-application: IDENTIFIER . '(' expression-list ')'
   36                     | IDENTIFIER .

    '('  shift, and go to state 27

    $default  reduce using rule 36 (function-application)


State 14

   40 boolean: "True" .

    $default  reduce using rule 40 (boolean)


State 15

   41 boolean: "False" .

    $default  reduce using rule 41 (boolean)


State 16

   31 expression: "not" . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 28
    function-application  go to state 24
    boolean               go to state 25


State 17

   32 expression: '-' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 29
    function-application  go to state 24
    boolean               go to state 25


State 18

   14 parameter: '\\' . IDENTIFIER

    IDENTIFIER  shift, and go to state 30


State 19

   34 expression: '(' . expression ')'

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 31
    function-application  go to state 24
    boolean               go to state 25


State 20

   17 expression: function .

    $default  reduce using rule 17 (expression)


State 21

    7 function: parameter-list . "->" '{' function-body '}'
   13 parameter-list: parameter-list . parameter

    "->"  shift, and go to state 32
    '\\'  shift, and go to state 18

    parameter  go to state 33


State 22

   12 parameter-list: parameter .

    $default  reduce using rule 12 (parameter-list)


State 23

    5 binding: IDENTIFIER '=' expression .
   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '>'      shift, and go to state 34
    '<'      shift, and go to state 35
    AND      shift, and go to state 36
    OR       shift, and go to state 37
    EQUALS   shift, and go to state 38
    LEQUALS  shift, and go to state 39
    GEQUALS  shift, and go to state 40
    NEQUALS  shift, and go to state 41
    '+'      shift, and go to state 42
    '-'      shift, and go to state 43
    '*'      shift, and go to state 44
    '/'      shift, and go to state 45
    '^'      shift, and go to state 46

    $default  reduce using rule 5 (binding)


State 24

   18 expression: function-application .

    $default  reduce using rule 18 (expression)


State 25

   16 expression: boolean .

    $default  reduce using rule 16 (expression)


State 26

    6 main-binding: "main" '=' expression .
   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '>'      shift, and go to state 34
    '<'      shift, and go to state 35
    AND      shift, and go to state 36
    OR       shift, and go to state 37
    EQUALS   shift, and go to state 38
    LEQUALS  shift, and go to state 39
    GEQUALS  shift, and go to state 40
    NEQUALS  shift, and go to state 41
    '+'      shift, and go to state 42
    '-'      shift, and go to state 43
    '*'      shift, and go to state 44
    '/'      shift, and go to state 45
    '^'      shift, and go to state 46

    $default  reduce using rule 6 (main-binding)


State 27

   35 function-application: IDENTIFIER '(' . expression-list ')'

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    $default  reduce using rule 37 (expression-list)

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 47
    function-application  go to state 24
    expression-list       go to state 48
    boolean               go to state 25


State 28

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   31           | "not" expression .
   33           | expression . '^' expression

    '^'  shift, and go to state 46

    $default  reduce using rule 31 (expression)


State 29

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   32           | '-' expression .
   33           | expression . '^' expression

    '^'  shift, and go to state 46

    $default  reduce using rule 32 (expression)


State 30

   14 parameter: '\\' IDENTIFIER .

    $default  reduce using rule 14 (parameter)


State 31

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression
   34           | '(' expression . ')'

    '>'      shift, and go to state 34
    '<'      shift, and go to state 35
    AND      shift, and go to state 36
    OR       shift, and go to state 37
    EQUALS   shift, and go to state 38
    LEQUALS  shift, and go to state 39
    GEQUALS  shift, and go to state 40
    NEQUALS  shift, and go to state 41
    '+'      shift, and go to state 42
    '-'      shift, and go to state 43
    '*'      shift, and go to state 44
    '/'      shift, and go to state 45
    '^'      shift, and go to state 46
    ')'      shift, and go to state 49


State 32

    7 function: parameter-list "->" . '{' function-body '}'

    '{'  shift, and go to state 50


State 33

   13 parameter-list: parameter-list parameter .

    $default  reduce using rule 13 (parameter-list)


State 34

   23 expression: expression '>' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 51
    function-application  go to state 24
    boolean               go to state 25


State 35

   24 expression: expression '<' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 52
    function-application  go to state 24
    boolean               go to state 25


State 36

   25 expression: expression AND . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 53
    function-application  go to state 24
    boolean               go to state 25


State 37

   26 expression: expression OR . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 54
    function-application  go to state 24
    boolean               go to state 25


State 38

   27 expression: expression EQUALS . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 55
    function-application  go to state 24
    boolean               go to state 25


State 39

   29 expression: expression LEQUALS . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 56
    function-application  go to state 24
    boolean               go to state 25


State 40

   28 expression: expression GEQUALS . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 57
    function-application  go to state 24
    boolean               go to state 25


State 41

   30 expression: expression NEQUALS . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 58
    function-application  go to state 24
    boolean               go to state 25


State 42

   19 expression: expression '+' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 59
    function-application  go to state 24
    boolean               go to state 25


State 43

   20 expression: expression '-' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 60
    function-application  go to state 24
    boolean               go to state 25


State 44

   21 expression: expression '*' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 61
    function-application  go to state 24
    boolean               go to state 25


State 45

   22 expression: expression '/' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 62
    function-application  go to state 24
    boolean               go to state 25


State 46

   33 expression: expression '^' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 63
    function-application  go to state 24
    boolean               go to state 25


State 47

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression
   38 expression-list: expression .

    '>'      shift, and go to state 34
    '<'      shift, and go to state 35
    AND      shift, and go to state 36
    OR       shift, and go to state 37
    EQUALS   shift, and go to state 38
    LEQUALS  shift, and go to state 39
    GEQUALS  shift, and go to state 40
    NEQUALS  shift, and go to state 41
    '+'      shift, and go to state 42
    '-'      shift, and go to state 43
    '*'      shift, and go to state 44
    '/'      shift, and go to state 45
    '^'      shift, and go to state 46

    $default  reduce using rule 38 (expression-list)


State 48

   35 function-application: IDENTIFIER '(' expression-list . ')'
   39 expression-list: expression-list . ',' expression

    ')'  shift, and go to state 64
    ','  shift, and go to state 65


State 49

   34 expression: '(' expression ')' .

    $default  reduce using rule 34 (expression)


State 50

    7 function: parameter-list "->" '{' . function-body '}'

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '|'         shift, and go to state 66
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    function-body         go to state 67
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 68
    function-application  go to state 24
    boolean               go to state 25


State 51

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   23           | expression '>' expression .
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    AND      shift, and go to state 36
    OR       shift, and go to state 37
    EQUALS   shift, and go to state 38
    LEQUALS  shift, and go to state 39
    GEQUALS  shift, and go to state 40
    NEQUALS  shift, and go to state 41
    '+'      shift, and go to state 42
    '-'      shift, and go to state 43
    '*'      shift, and go to state 44
    '/'      shift, and go to state 45
    '^'      shift, and go to state 46

    $default  reduce using rule 23 (expression)


State 52

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   24           | expression '<' expression .
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    AND      shift, and go to state 36
    OR       shift, and go to state 37
    EQUALS   shift, and go to state 38
    LEQUALS  shift, and go to state 39
    GEQUALS  shift, and go to state 40
    NEQUALS  shift, and go to state 41
    '+'      shift, and go to state 42
    '-'      shift, and go to state 43
    '*'      shift, and go to state 44
    '/'      shift, and go to state 45
    '^'      shift, and go to state 46

    $default  reduce using rule 24 (expression)


State 53

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   25           | expression AND expression .
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '^'  shift, and go to state 46

    $default  reduce using rule 25 (expression)


State 54

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   26           | expression OR expression .
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '^'  shift, and go to state 46

    $default  reduce using rule 26 (expression)


State 55

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   27           | expression EQUALS expression .
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '^'  shift, and go to state 46

    $default  reduce using rule 27 (expression)


State 56

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   29           | expression LEQUALS expression .
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '^'  shift, and go to state 46

    $default  reduce using rule 29 (expression)


State 57

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   28           | expression GEQUALS expression .
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '^'  shift, and go to state 46

    $default  reduce using rule 28 (expression)


State 58

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   30           | expression NEQUALS expression .
   33           | expression . '^' expression

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '^'  shift, and go to state 46

    $default  reduce using rule 30 (expression)


State 59

   19 expression: expression . '+' expression
   19           | expression '+' expression .
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '^'  shift, and go to state 46

    $default  reduce using rule 19 (expression)


State 60

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   20           | expression '-' expression .
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '^'  shift, and go to state 46

    $default  reduce using rule 20 (expression)


State 61

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   21           | expression '*' expression .
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '^'  shift, and go to state 46

    $default  reduce using rule 21 (expression)


State 62

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   22           | expression '/' expression .
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '^'  shift, and go to state 46

    $default  reduce using rule 22 (expression)


State 63

   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression
   33           | expression '^' expression .

    '^'  shift, and go to state 46

    $default  reduce using rule 33 (expression)


State 64

   35 function-application: IDENTIFIER '(' expression-list ')' .

    $default  reduce using rule 35 (function-application)


State 65

   39 expression-list: expression-list ',' . expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 69
    function-application  go to state 24
    boolean               go to state 25


State 66

    9 function-body: '|' . subdomain-list expression

    NUMBER      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    "True"      shift, and go to state 14
    "False"     shift, and go to state 15
    "not"       shift, and go to state 16
    '-'         shift, and go to state 17
    '\\'        shift, and go to state 18
    '('         shift, and go to state 19

    function              go to state 20
    subdomain-list        go to state 70
    parameter-list        go to state 21
    parameter             go to state 22
    expression            go to state 71
    function-application  go to state 24
    boolean               go to state 25


State 67

    7 function: parameter-list "->" '{' function-body . '}'

    '}'  shift, and go to state 72


State 68

    8 function-body: expression .
   19 expression: expression . '+' expression
   20           | expression . '-' expression
   21           | expression . '*' expression
   22           | expression . '/' expression
   23           | expression . '>' expression
   24           | expression . '<' expression
   25           | expression . AND expression
   26           | expression . OR expression
   27           | expression . EQUALS expression
   28           | expression . GEQUALS expression
   29           | expression . LEQUALS expression
   30           | expression . NEQUALS expression
   33           | expression . '^' expression

    '>'      shift, and go to state 34
    '<'      shift, and go to state 35
    AND      shift, and go to state 36
    OR       shift, and go to state 37
    EQUALS   shift, and go to state 38
    LEQUALS  shift, and go to state 39
    GEQUALS  shift, and go to state 40
    NEQUALS  shift, and go to state 41
    '+'      shift, and go to state 42
    '-'      shift, and go to state 43
    '*'      shift, and go to state 44
    '/'      shift, and go to state 45
    '^'      shift, and go to state 46

    $default  reduce using rule 8 (function-body)


State 69
